--- a/docs/style.css
+++ b/docs/style.css
@@ -13,7 +13,8 @@ body, html {
 }
 .sidebar {
   background: #eceff1;
-  min-width: 250px;
+  /*min-width: 250px;*/
+  min-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
